@@ -49,6 +49,7 @@ Version 0.6.0~dev
 	* Support pix_fmt option for dnxhd transcode in ffmpeg worker.
 	* Fix crash in transmux action when nb_video_frames is not specified in
 	  input ressource.
+	* Specify mxf_d10 format when d10 mapping is enabled in ffmpeg worker.
 
 Version 0.5.0 Released on 2012/03/29
 
